scribble-test/src/test/resources/bad/syntax/disamb/imports/Import02.scr
module bad.syntax.disamb.imports.Import02;


import bad.syntax.disamb.imports.Import02;
